[project]
name = "via"
version = "0.1.2"
description = "initialize your repository"
authors = [{ name = "Keming", email = "kemingy94@gmail.com" }]
requires-python = ">=3.6"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "urllib3>=2.0.2",
]
[project.urls]
"Homepage" = "https://github.com/kemingy/via"
[project.scripts]
via = "via:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "B", "I", "SIM", "TID", "PL"]

[tool.black]
line-length = 88
